# sphinx-click-rst-to-ansi-formatter

./: .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  development.html  genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  see-also.html  tox.ini  usage.html
.github/workflows/: ci.yml  doc_pages.yml
_sources/: index.rst.txt  see-also.rst.txt  usage.rst.txt
docs/: conf.py  development.rst  introduction.rst
examples/: minimal.py  minimal2.py  minimal_group.py  unordered_list.py
pre-commit-helpers/: run_mypy.sh
src/sphinx_click/rst_to_ansi_formatter/: __init__.py  colors.py  formatter.py  textutils.py  types.py
tests/: conftest.py  test_ansiwrap.py  test_basic.py
