[tool.poetry]
name = "sphinx-click-rst-to-ansi-formatter"
version = "0.1.0"
description = ""
authors = ["Håkon Hægland <hakon.hagland@gmail.com>"]
readme = "README.md"
packages = [{include = "sphinx_click", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.12.0"
coverage = {extras = ["toml"], version = "^7.4.3"}
ruff = "^0.3.2"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"
pre-commit = "^3.6.2"
mypy = "^1.9.0"
types-colorama = "^0.4.15.20240311"
types-docutils = "^0.20.0.20240317"
types-click = "^7.1.8"

[tool.ruff]
line-length = 88

[tool.mypy]
# Note these setting alone are not enough to make `mypy src tests` work.
# We also need to set MYPYPATH=src but that cannot be done in this file.
# Use `make mypy` to run mypy with the correct settings.
namespace_packages = true
explicit_package_bases = true
strict = true

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
